--- a/docker/static/Dockerfile
+++ b/docker/static/Dockerfile
@@ -5,3 +5,5 @@ FROM nginx:stable
 
 COPY ./public/ /var/www
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+CMD [ "/waypoint-entrypoint", "nginx", "-g", "daemon", "daemon off;" ]
