--- a/docker/static/Dockerfile
+++ b/docker/static/Dockerfile
@@ -6,4 +6,4 @@ FROM nginx:stable
 COPY ./public/ /var/www
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-CMD [ "/waypoint-entrypoint", "nginx", "-g", "daemon", "daemon off;" ]
+CMD [ "/waypoint-entrypoint", "nginx", "-g", "daemon off;" ]
